# rag_template

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py
backend/app/routes/: __init__.py
backend/services/: __init__.py  document_processor.py  embedding_service.py  llm_service.py  rag_agent.py  vector_store.py
src/agents/: base.py  folder_profiler.py
src/api/: schemas.py  server.py
src/app/: logging_config.py  main.py  settings.py
src/core/graph/: schema.py
src/core/orchestration/: errors.py  state.py
src/core/policies/: folder_policy.py  registry.py
src/ingestion/: models.py  pipeline.py
src/ingestion/chunking/: chunker.py
src/ingestion/extractors/: common.py  docx.py  images.py  xlsx.py
src/llm/: client.py  prompts.py
src/retrieval/: graph.py  hybrid.py  semantic.py  tokenization.py
src/services/: knowledge_base.py
src/utils/: fileio.py  ids.py
src/web/: app.js  index.html  styles.css
tests/: test_api_smoke.py
